--- a/myfamily.html
+++ b/myfamily.html
@@ -62,9 +62,9 @@
           <br><br>
           <p><h3>Here are some photo of this family</h3></p>
           <br><br>
-          <img src="https://github.com/Naing-creator/TEST-WEDSITE/blob/main/family_photo2.jpg" height="50%"  alt="this is a photo of a happy family">
-          <img src="https://github.com/Naing-creator/TEST-WEDSITE/blob/main/family_photo3.jpg" height="50%"  alt="this is a photo of a happy family" align:center>
-          <img src="https://github.com/Naing-creator/TEST-WEDSITE/blob/main/family_photo1.jpg" height="50%"  alt="this is a photo of a happy family" align:left>
+          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" height="50%"  alt="this is a photo of a happy family">
+          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" height="50%"  alt="this is a photo of a happy family" align:center>
+          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo1.jpg" height="50%"  alt="this is a photo of a happy family" align:left>
       </body>
 
   </html>
