--- a/myfamily.html
+++ b/myfamily.html
@@ -6,7 +6,7 @@
          table {
                 border: 2px solid black;
                 border-collapse: collapse;
-                height:75%;width: 75%;
+                height:75% ;width: 75%;
                 background-color:grey;
               }
         td,th {
@@ -19,7 +19,7 @@
         <h2>MY FAMILY MEMBERS</h2>
         <hr>
         <br><br>
-        <p><h3>This is a simple table of <b>my happy family</b></h3></p>
+        <p><h3><i>This is a simple table of my happy family</i></h3></p>
           <table>
             <tr>
               <th>Roles in family</th>
@@ -60,11 +60,11 @@
               </tr>
           </table>
           <br><br>
-          <p><h3>Here are some photo of this family</h3></p>
+          <p style="font-family: justify;color : purple"><h3><mark>Here are some photo of this family</mark></h3></p>
           <br><br>
-          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" height="50%"  alt="this is a photo of a happy family">
-          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" height="50%"  alt="this is a photo of a happy family" align:center>
-          <img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo1.jpg" height="50%"  alt="this is a photo of a happy family" align:left>
+          <a href="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" target="_blank"><img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" height="40%" width="40%" alt="this is a photo of a happy family"></a>
+          <a href="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" target="_blank"><img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" height="40%" width="40%" alt="this is a photo of a happy family" align:center></a>
+          <a href="https://naing-creator.github.io/TEST-WEDSITE/family_photo1.jpg" target="_blank"><img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo1.jpg" height="40%" width="40%" alt="this is a photo of a happy family" align:left></a>
       </body>
 
   </html>
