--- a/myfamily.html
+++ b/myfamily.html
@@ -60,7 +60,7 @@
               </tr>
           </table>
           <br><br>
-          <p style="font-family: justify;color : purple"><h3>Here are some photo of this family</h3></p>
+          <p style="font-family: justify;color : blue"><h3>Here are some photo of this family</h3></p>
           <br><br>
           <a href="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" target="_blank"><img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo2.jpg" height="40%" width="40%" alt="this is a photo of a happy family"></a>
           <a href="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" target="_blank"><img src="https://naing-creator.github.io/TEST-WEDSITE/family_photo3.jpg" height="40%" width="40%" alt="this is a photo of a happy family" align:center></a>
